// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with logo 1`] = `
<DocumentFragment>
  <div
    class="CompanyCard card"
  >
    <a
      href="/companies/rithm"
    >
      <div
        class="card-body"
      >
        <div
          class="card-title"
        >
          Rithm School
        </div>
        <p
          class="card-text"
        >
          Become an exceptional developer in 16 weeks.
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot without logo 1`] = `
<DocumentFragment>
  <div
    class="CompanyCard card"
  >
    <a
      href="/companies/algo"
    >
      <div
        class="card-body"
      >
        <div
          class="card-title"
        >
          Algo School
        </div>
        <p
          class="card-text"
        >
          Become a mediocre developer in 160 weeks.
        </p>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
